Started car page

--- a/Cars/app/src/main/AndroidManifest.xml
+++ b/Cars/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.CarActivity">
+            android:name=".activities.CarActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        </activity>
     </application>
 
 </manifest>
