--- a/Cars/app/src/main/AndroidManifest.xml
+++ b/Cars/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.killian.cars">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -16,11 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.CarActivity">
-            android:name=".activities.CarActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        </activity>
+        <activity
+            android:name=".Activities.CarActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
