--- a/Cars/app/build.gradle
+++ b/Cars/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:cardview-v7:24.0.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:design:24.0.+'
+    compile 'com.android.support:customtabs:24.0.+'
+
 }
