--- a/Cars/app/build.gradle
+++ b/Cars/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:24.0.+'
     compile 'com.android.support:customtabs:24.0.+'
+    compile 'com.jakewharton:butterknife:8.2.1'
 
 }
