--- a/Cars/app/build.gradle
+++ b/Cars/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:design:24.0.+'
     compile 'com.android.support:customtabs:24.0.+'
     compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'org.michaelevans.colorart:library:0.0.3'
+
 
 }
