--- a/Cars/app/build.gradle
+++ b/Cars/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.killian.cars"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -22,14 +22,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:cardview-v7:24.0.+'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:design:24.0.+'
-    compile 'com.android.support:customtabs:24.0.+'
-    compile 'com.jakewharton:butterknife:8.2.1'
     compile 'org.michaelevans.colorart:library:0.0.3'
-
-
+    compile 'com.jakewharton:butterknife:8.2.1'
 }
