--- a/Cars/app/src/main/AndroidManifest.xml
+++ b/Cars/app/src/main/AndroidManifest.xml
@@ -17,9 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Activities.CarActivity"
-            android:label="@string/app_name" />
+
+        <activity android:name=".Activities.CarActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
