--- a/Cars/app/build.gradle
+++ b/Cars/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.michaelevans.colorart:library:0.0.3'
     compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
 }
