--- a/Cars/app/src/main/AndroidManifest.xml
+++ b/Cars/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activities.CarActivity"
+        <activity android:name=".activities.CarActivity"
             android:label="@string/app_name">
         </activity>
     </application>
