--- a/Cars/app/src/main/AndroidManifest.xml
+++ b/Cars/app/src/main/AndroidManifest.xml
@@ -7,10 +7,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
+
+        </activity>
+
+        <activity android:name=".activities.CarActivity"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,9 +26,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.CarActivity"
-            android:label="@string/app_name">
-        </activity>
+
     </application>
 
 </manifest>
